# Lyrebird

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REFERENCE.md  SCOPE.md  SECURITY.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: detection-pairing-reviewer.md
.claude/hooks/: spdx_check.py
.claude/skills/new-service/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  jekyll-gh-pages.yml  publish.yml
config/: lyrebird.yaml
demo/: README.md  lyrebird.ai.demo.yaml  lyrebird.ai.tape  lyrebird.demo.yaml  lyrebird.honeypot.tape  lyrebird.honeypot.yaml  lyrebird.tape  render.sh  telnet_client.py
detections/sigma/: beacon_correlation.yml  dns_long_label_dga.yml  dns_sandbox_probe.yml  dns_tunnel_correlation.yml  ftp_bounce.yml  ftp_tftp_upload_exfil.yml  http_beacon_no_useragent.yml  http_frontable_host_beacon.yml  http_outbound_data.yml  http_suspicious_user_agent.yml  imap_idle_c2_wait.yml  irc_channel_join_c2.yml  ntp_control_query.yml  quic_http3.yml  smtp_bulk_recipients.yml  ssh_bruteforce.yml  ssh_shell_payload_pull.yml  telnet_bruteforce.yml  telnet_payload_pull.yml  tls_known_bad_ja3_ja4.yml  tls_no_grease_client.yml  tls_no_grease_modern_client.yml  tls_sni_host_mismatch.yml
docker/: Dockerfile  docker-compose.yml
docs/: index.html
docs/superpowers/plans/: 2026-06-30-imap-idle.md  2026-06-30-ssh-honeypot.md  2026-06-30-tls-ja3-enrichment-no-grease.md  2026-07-01-dns-tunnel-exfil.md  2026-07-01-ftp-active-mode-hardening.md  2026-07-01-ntp-control-query.md  2026-07-01-quic-http3.md  2026-07-01-telnet-honeypot.md
docs/superpowers/specs/: 2026-06-30-imap-idle-design.md  2026-06-30-ssh-honeypot-design.md  2026-06-30-tls-ja3-enrichment-no-grease-design.md  2026-07-01-dns-tunnel-exfil-design.md  2026-07-01-ftp-active-mode-hardening-design.md  2026-07-01-ntp-control-query-design.md  (+2 more)
scripts/: gen_reference.py  lint_sigma.py
src/lyrebird/: __init__.py  __main__.py  analyze.py  base.py  beacons.py  certs.py  cli.py  config.py  dns_tunnel.py  events.py  mimicry.py  orchestrator.py  profiles.py  tls.py
tests/: test_beacons.py  test_core.py  test_detection_pairing.py  test_dns_tunnel.py  test_dns_upstream.py  test_features.py  test_ftp_bounce.py  test_http_user_agent.py  test_imap_idle.py  test_mimicry.py  test_ntp_control.py  test_phase3_services.py  test_quic_service.py  test_reference.py  test_services.py  test_ssh_service.py  test_ssh_shell.py  test_telnet_service.py  test_tls.py  test_tls_grease.py  test_tls_service.py  test_tls_stop.py
(+27 files in other folders)
