[project]
name = "lyrebird"
version = "0.1.0"
description = "Modern internet-services emulation suite for malware analysis labs"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "fastapi>=0.110",
    "starlette>=0.36",
    "uvicorn>=0.29",
    "aiosmtpd>=1.4.6",
    "dnslib>=0.9.24",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
lyrebird = "lyrebird.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
